# CodeReview

./: .env  .env.example  .env.staging  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .replit  Dockerfile  Dockerfile.fastapi  Dockerfile.worker  FASTAPI_README.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_SUMMARY.md  Makefile  PRODUCTION_RELEASE_SUMMARY.md  README.md  README_CONVERSATION_HIGHLIGHTS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_TITLE.md  SETUP.md  demo.html  docker-compose.yml  jest.config.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.ts  vite.config.ts
.codesandbox/: tasks.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  (+2 more)
app/: README.md  __init__.py  main.py
attached_assets/: Pasted--CodeReview-AI-A-Google-inspired-web-based-code-review-and-debugging-tool-for-GitHub-repositorie-1748090136400.txt  Pasted--Summary-Enhancing-your-CodeReview-GitHub-Repository-Analysis-Tool-involves-improvements-ac-1747435147338.txt  Pasted--Summary-To-harden-your-FastAPI-application-you-should-enforce-secure-configuration-and-depend-1747435203151.txt  Pasted-8-potential-vulnerabilities-found-Last-ran-on-4-12-pm-Jun-04-2025-Detected-potential-vulnerabilit-1749017584312.txt  content-1747411610553.md
client/: README.md  index.html
coverage/: clover.xml
docs/: AI_FEATURES_SETUP.md  ARCHITECTURE.md  CONTRIBUTING.md  CONVERSATION_HIGHLIGHTS_FEATURE.md  DEPLOYMENT.md  FASTAPI_IMPLEMENTATION.md  FASTAPI_MIGRATION.md  MONITORING_GUIDE.md  PROMPT_CACHING.md  REPLIT_AGENT_INTEGRATION.md  SCAFFOLD_SUMMARY.md  SECURITY.md  STRUCTURE_OVERVIEW.md  index.html  sales-funnel-guide.md
scripts/: demo-prompt-caching.js  migrate-agent-tables.ts  push-schema.ts  test-agent-endpoints.js  test-monitoring.sh
server/: README.md  db.ts  index.ts  replitAuth.ts  routes.ts  routes.ts.backup  storage.ts
shared/: schema.ts
tests/: conftest.py
(+92 files in other folders)
